# chauve

./: .gitignore  LICENSE  README.md
chauve/: application.qrc  chauve.pro  finddialog.cpp  finddialog.h  gotocelldialog.cpp  gotocelldialog.h  gotocelldialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  replay.cpp  replay.h  replaymanager.cpp  replaymanager.h  replaywidget.cpp  replaywidget.ui  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  sortdialog.cpp  sortdialog.h  sortdialog.ui  spreadsheet.qrc
chauve/protobuf/: demo.pb.cc  demo.pb.h  dota_commonmessages.pb.cc  dota_commonmessages.pb.h  dota_commonmessages.proto  dota_shared_enums.pb.cc  dota_shared_enums.pb.h  dota_usermessages.pb.cc  dota_usermessages.pb.h  dota_usermessages.proto  netmessages.pb.cc  netmessages.pb.h  network_connection.pb.cc  network_connection.pb.h  networkbasetypes.pb.cc  networkbasetypes.pb.h  usermessages.pb.cc  usermessages.pb.h
protobuf-3.7.1/win_x64/: libprotobuf.exp
snappy-1.1.7/include/: snappy-stubs-public.h
snappy-1.1.7/win_x64/: snappy.lib  snappyd.lib
src/: CMakeLists.txt  CMakeSettings.json  application.qrc  chauve.db  chauve.pro  database_manager.cpp  database_manager.h  game.cpp  game.h  games_manager.cpp  games_manager.h  hero.cpp  hero.h  main.cpp  mainwindow.cpp  mainwindow.h  replay.cpp  replay.h  replaymanager.cpp  replaymanager.h  replaywidget.cpp  replaywidget.h  replaywidget.ui  settings_manager.cpp  settings_manager.h  settingsdialog.cpp  settingsdialog.ui
src/parser/: hero.cpp  hero.h  parse_result.cpp  parse_result.h  parser.cpp  parser.h
src/parser/protobuf/: demo.pb.cc  dota_shared_enums.pb.cc  dota_shared_enums.pb.h  dota_usermessages.pb.h  networkbasetypes.pb.cc  usermessages.pb.h
src/protobuf/: demo.pb.h  dota_commonmessages.pb.cc  dota_commonmessages.pb.h  dota_shared_enums.pb.h  dota_shared_enums.proto  netmessages.pb.h  network_connection.pb.cc  network_connection.pb.h  networkbasetypes.pb.h
